utils/oai-model-cars/k8s/all-mpnet-base-v2.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: all-mpnet-base-v2
spec:
  to:
    kind: Service
    name: all-mpnet-base-v2-predictor
    weight: 100
  port:
    targetPort: all-mpnet-base-v2-predictor
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
