utils/oai-model-cars/k8s/roberta-base-squad2.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: roberta-base-squad2
spec:
  to:
    kind: Service
    name: roberta-base-squad2-predictor
    weight: 100
  port:
    targetPort: roberta-base-squad2-predictor
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
